# CUDA

./: .gitignore  README.md
cpp_CUDA_OCV_benchmark/: CMakeLists.txt
cpp_CUDA_OCV_benchmark/src/: main.cpp
cpp_CUDA_videofilter/: buildinfo  buildinfo.cpp  cudavideo  cudavideo.cpp
cpp_cuda/: CMakeLists.txt
cpp_cuda/src/: main.cpp
cpp_cuda_filtertest/: cudafilter  cudafilter.cpp
cpp_cuda_minimo/: CMakeLists.txt
cpp_cuda_minimo/src/: main.cu
cpp_cuda_ocv/: CMakeLists.txt
cpp_cuda_ocv/src/: kernel.cu  main.cpp
cpp_cuda_opengl/: canny_cuda.cpp  cuda_gl_interop_test.cpp  cuda_glfw_pbo.cpp  cuda_glfw_pipeline.cpp  main.cpp
cpp_cuda_videopipeline/: 0_readvideo.cpp  1_gaussiangpu.cpp  2_gaussianfpsgpu.cpp  3_glfw.cpp  4_texture_pbo_quad.cpp  5_interop_cuda_pbo.cpp  6_gl_shader.cpp  7_glstreams.cpp
cpp_cudnn_test/: test_cudnn  test_cudnn.cpp
cpp_cv_showimage/: app  showimage.cpp
cpp_cvcam/: app  cvcam.cpp
cpp_ocv_buildinfo/: opencvbuildinfo  opencvbuildinfo.cpp
cpp_ocv_cuda_minimo/: CMakeLists.txt
cpp_ocv_cuda_minimo/src/: main.cpp
cpp_ocv_minimo/: CMakeLists.txt
cpp_ocv_minimo/src/: main.cpp
py_cuda_gray/: cudagray.py
py_opencl_test/: requirements.txt  simpleopencl.py
